--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
     min-height: 100vh;
     margin: 0;
     background-color: #f5f2f0;
-    font-size: 20px;
+    font-size: 20px; 
 }
 
 header {
@@ -24,14 +24,12 @@ header {
 footer {
     margin-top: auto;
     text-align: center;
+    padding: 20px;
 }
-
-.slidecontainer {
-    width: 100%;
-  }
-  
+ 
   .slider {
-    -webkit-appearance: none; 
+    -webkit-appearance: none;
+    appearance: none;
     width: 30%;
     height: 15px;
     border-radius: 5px;
@@ -62,4 +60,23 @@ footer {
     border-radius: 50%;
     background: #242444;
     cursor: pointer;
+  }
+
+  #gridContent {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 320px;
+    max-height: 320px;
+    
+  }
+
+  .gridCell {
+    border: 1px solid black;
+    box-sizing: border-box;
+    height: 20px;
+    width: 20px;
+  }
+  
+  .gridRow {
+    height: 0px;
   }
