--- a/styles.css
+++ b/styles.css
@@ -65,16 +65,14 @@ footer {
   #gridContent {
     display: flex;
     flex-wrap: wrap;
-    max-width: 320px;
-    max-height: 320px;
+    max-width: 480px;
+    max-height: 480px;
     
   }
 
-  .gridCell {
+  #gridCell {
     border: 1px solid black;
     box-sizing: border-box;
-    height: 20px;
-    width: 20px;
   }
   
   .gridRow {
