--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ footer {
     transition: opacity .2s;
   }
   
-  .slider:hover {
+  .slider:hover, .btn:hover {
     opacity: 1;
   }
   
@@ -56,7 +56,7 @@ footer {
     width: 25px;
     height: 25px;
     border-radius: 50%;
-    background: #242444;
+    background: #1a1a41;
     cursor: pointer;
   }
   
@@ -64,24 +64,20 @@ footer {
     width: 25px;
     height: 25px;
     border-radius: 50%;
-    background: #242444;
+    background: #1a1a41;
     cursor: pointer;
   }
 
   .gridContainer {
     display: flex;
-    justify-content: center;
     margin: 50px;
-  }
+  } 
 
   #gridContent {
     display: flex;
     flex-wrap: wrap;
-    max-width: 480px;
-    max-height: 480px;
-    justify-content: center;
-    align-items: center;
-    
+    max-width: 640px;
+    max-height: 640px;
   }
 
   #gridCell {
@@ -91,4 +87,26 @@ footer {
   
   .gridRow {
     height: 0px;
+  }
+
+  .interactiveBlock {
+    background-color: #d3d3d379;
+    border-radius: 20px;
+    margin: 20px;
+    padding: 20px;
+  }
+
+  .container {
+    display: flex;
+  }
+
+  .btn {
+    background-color: #1a1a41;
+    color: white;
+    font-size: 20px;
+    border-radius: 6px;
+    border: none;
+    padding: 4px;
+    opacity: 0.7;
+    cursor: pointer;
   }
