--- a/styles.css
+++ b/styles.css
@@ -78,15 +78,12 @@ footer {
     flex-wrap: wrap;
     max-width: 640px;
     max-height: 640px;
+    border: 3px solid rgba(0, 0, 0, 0.8) ;
   }
 
   #gridCell {
-    border: 1px solid black;
-    box-sizing: border-box;
-  }
-  
-  .gridRow {
-    height: 0px;
+    /*border: 1px solid black;
+    box-sizing: border-box; */
   }
 
   .interactiveBlock {
